# glslstruct

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
GLSL-Struct-Cpp/: CMakeLists.txt  GLSL-Struct-Cpp.vcxproj  GLSL-Struct-Cpp.vcxproj.filters
GLSL-Struct-Cpp/include/: EventHandler.h  STD140Offsets.h  STD140Offsets.hpp  STD430Offsets.h  STD430Offsets.hpp  STDOffsets.h  STDOffsets.hpp  STDStruct.h  STDStruct.hpp  STDValue.h  STDValue.hpp  STDVariable.h  STDVariable.hpp  ValueTypes.h  ValueTypes.hpp  pch.h  templates.h  templates.hpp
GLSL-Struct-Cpp/src/: GLSL-Struct-Cpp.cpp  STD140Offsets.cpp  STD430Offsets.cpp  STDOffsets.cpp  ValueTypes.cpp  pch.hpp
GLSL-Struct-Tests/: CMakeLists.txt  pch.h  pch.hpp  test.cpp
cmake/: third_party.cmake
glslstruct/: CMakeLists.txt
glslstruct-tests/: CMakeLists.txt  matrixes_tests.cpp  pch.hpp  samples_tests.cpp  scalars_tests.cpp  std_struct_tests.cpp  structs_tests.cpp  test.cpp  variables_tests.cpp  vectors_tests.cpp
glslstruct/include/glslstruct/: glslstruct.hpp  libraries.hpp  std140_offset.hpp  std430_offset.hpp  std_offset.hpp  std_struct.hpp  std_value.hpp  std_variable.hpp  templates.hpp  value_data.hpp  value_types.hpp
glslstruct/include/glslstruct/value_types/: ValueType.hpp  array_type.hpp  base_type.hpp  base_type_visitor.hpp  mat_type.hpp  scalar_type.hpp  struct_type.hpp  type_cast_visitor.hpp  type_eq_visitor.hpp  type_hash_visitor.hpp  value_type.hpp  vec_type.hpp
glslstruct/src/: pch.hpp
glslstruct/src/glslstruct/: std140_offset.cpp  std430_offset.cpp  std_offset.cpp  value_data.cpp  value_types.cpp
glslstruct/src/glslstruct/value_types/: ValueType.cpp  array_type.cpp  base_type.cpp  mat_type.cpp  scalar_type.cpp  struct_type.cpp  type_hash_visitor.cpp  vec_type.cpp
